docs: add start and end date to  GET /api/transactions/ docs;
